<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
     <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="14dp"
        android:text="@string/dialog_currency_title"
        style="@style/CurrencyDialogTitleStyle"/>
    <LinearLayout
        android:id="@+id/usd"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="28dp"
        android:orientation="horizontal"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/CurrencyDialogItemStyle"
            android:text="@string/currency_usd_symbol"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/CurrencyDialogItemStyle"
            android:layout_marginStart="35dp"
            android:text="@string/currency_usd"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/eur"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="28dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/CurrencyDialogItemStyle"
            android:text="@string/currency_eur_symbol"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/CurrencyDialogItemStyle"
            android:layout_marginStart="35dp"
            android:text="@string/currency_eur"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rub"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="27dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/CurrencyDialogItemStyle"
            android:text="@string/currency_rub_symbol"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/CurrencyDialogItemStyle"
            android:layout_marginStart="35dp"
            android:text="@string/currency_rub"/>
    </LinearLayout>
</LinearLayout>